# AI-Video-Transcriber

./: .env.example  .gitignore  AGENT_GUIDE.md  Dockerfile  PLAN.md  PLAN_CLI.md  PLAN_CLI_IMPROVE.md  PLAN_LOCAL_MODELS.md  README.md  README_ZH.md  cli.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  start.py  start_windows.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
.skills/: SKILL.md
ai-video-transcriber/: SKILL.md
backend/: __init__.py  groq_transcriber.py  html_export.py  local_api_transcriber.py  local_transcription.py  main.py  parakeet_transcriber.py  settings.py  summarizer.py  transcriber.py  transcript_formatting.py  translator.py  video_processor.py
static/: app.js  index.html
tests/: test_backend_import.py  test_cli.py  test_dual_transcription.py  test_groq_url_transcriber.py  test_html_export.py  test_multi_source.py  test_plan_contract.py  test_settings.py  test_summarizer_prompt.py  test_transcript_formatting.py  test_video_processor.py
