[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-video-transcriber"
version = "1.0.0"
description = "CLI for video/audio transcription and AI summarization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "yt-dlp>=2024.12.13",
    "openai>=1.51.0",
    "pydantic>=2.7.0",
    "aiofiles>=24.1.0",
    "faster-whisper>=1.1.0",
    "imageio-ffmpeg>=0.5.1",
]

[project.scripts]
avt = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
